ch7-ingress/labs/lab01/todo-backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
