ch7-ingress/labs/lab01/todo-frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
